--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **(3a) Loading and splitting the data **\n",
+    "#### **Loading and splitting the data **\n",
     "#### We are now ready to start working with the actual CTR data, and our first task involves splitting it into training, validation, and test sets.  Use the [randomSplit method](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.randomSplit) with the specified weights and seed to create RDDs storing each of these datasets, and then [cache](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.cache) each of these RDDs, as we will be accessing them multiple times in the remainder of this lab. Finally, compute the size of each dataset."
    ]
   },
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (3b) Extract features **\n",
+    "#### ** Extract features **\n",
     "#### We will now parse the raw training data to create an RDD that we can subsequently use to create an OHE dictionary. Note from the `take()` command in Part (3a) that each raw data point is a string containing several fields separated by some delimiter.  For now, we will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features).  To do this, complete the implemention of the `parsePoint` function."
    ]
   },
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **(3c) Create an OHE dictionary from the dataset **\n",
+    "#### **Create an OHE dictionary from the dataset **\n",
     "#### Note that parsePoint returns a data point as a list of `(featureID, category)` tuples, which is the same format as the sample dataset studied in Parts 1 and 2 of this lab.  Using this observation, create an OHE dictionary using the function implemented in Part (2c). Note that we will assume for simplicity that all features in our CTR dataset are categorical."
    ]
   },
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (3d) Apply OHE to the dataset **\n",
+    "#### ** Apply OHE to the dataset **\n",
     "#### Now let's use this OHE dictionary by starting with the raw training data and creating an RDD of [LabeledPoint](http://spark.apache.org/docs/1.3.1/api/python/pyspark.mllib.html#pyspark.mllib.regression.LabeledPoint) objects using OHE features.  To do this, complete the implementation of the `parseOHEPoint` function. Hint: `parseOHEPoint` is an extension of the `parsePoint` function from Part (3b) and it uses the `oneHotEncoding` function from Part (1d)."
    ]
   },
@@ -404,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **(3e) Handling unseen features **\n",
+    "#### **Handling unseen features **\n",
     "#### We naturally would like to repeat the process from Part (3d), e.g., to compute OHE features for the validation and test datasets.  However, we must be careful, as some categorical values will likely appear in new data that did not exist in the training data. To deal with this situation, update the `oneHotEncoding()` function from Part (1d) to ignore previously unseen categories, and then compute OHE features for the validation data."
    ]
   },
@@ -480,14 +480,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ** Part 4: CTR prediction and logloss evaluation **"
+    "### ** Part 2: CTR prediction and logloss evaluation **"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (4a) Logistic regression **\n",
+    "#### ** (2a) Logistic regression **\n",
     "#### We are now ready to train our first CTR classifier.  A natural classifier to use in this setting is logistic regression, since it models the probability of a click-through event rather than returning a binary response, and when working with rare events, probabilistic predictions are useful.  First use [LogisticRegressionWithSGD](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.classification.LogisticRegressionWithSGD) to train a model using `OHETrainData` with the given hyperparameter configuration.  `LogisticRegressionWithSGD` returns a [LogisticRegressionModel](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.regression.LogisticRegressionModel).  Next, use the `LogisticRegressionModel.weights` and `LogisticRegressionModel.intercept` attributes to print out the model's parameters.  Note that these are the names of the object's attributes and should be called using a syntax like `model.weights` for a given `model`."
    ]
   },
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (4b) Log loss **\n",
+    "#### ** (2b) Log loss **\n",
     "#### Throughout this lab, we will use log loss to evaluate the quality of models.  Log loss is defined as: $$  \\begin{align} \\scriptsize \\ell_{log}(p, y) = \\begin{cases} -\\log (p) & \\text{if } y = 1 \\\\\\ -\\log(1-p) & \\text{if } y = 0 \\end{cases} \\end{align} $$ where $ \\scriptsize p$ is a probability between 0 and 1 and $ \\scriptsize y$ is a label of either 0 or 1. Log loss is a standard evaluation criterion when predicting rare-events such as click-through rate prediction (it is also the criterion used in the [Criteo Kaggle competition](https://www.kaggle.com/c/criteo-display-ad-challenge)).  Write a function to compute log loss, and evaluate it on some sample inputs."
    ]
   },
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (4c)  Baseline log loss **\n",
+    "#### ** (2c)  Baseline log loss **\n",
     "#### Next we will use the function we wrote in Part (4b) to compute the baseline log loss on the training data. A very simple yet natural baseline model is one where we always make the same prediction independent of the given datapoint, setting the predicted value equal to the fraction of training points that correspond to click-through events (i.e., where the label is one). Compute this value (which is simply the mean of the training labels), and then use it to compute the training log loss for the baseline model.  The log loss for multiple observations is the mean of the individual log loss values."
    ]
   },
@@ -711,7 +711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (4d) Predicted probability **\n",
+    "#### ** (2d) Predicted probability **\n",
     "#### In order to compute the log loss for the model we trained in Part (4a), we need to write code to generate predictions from this model. Write a function that computes the raw linear prediction from this logistic regression model and then passes it through a [sigmoid function](http://en.wikipedia.org/wiki/Sigmoid_function) $ \\scriptsize \\sigma(t) = (1+ e^{-t})^{-1} $ to return the model's probabilistic prediction. Then compute probabilistic predictions on the training data.\n",
     "#### Note that when incorporating an intercept into our predictions, we simply add the intercept to the value of the prediction obtained from the weights and features.  Alternatively, if the intercept was included as the first weight, we would need to add a corresponding feature to our data where the feature has the value one.  This is not the case here."
    ]
@@ -839,7 +839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (4e) Evaluate the model **\n",
+    "#### ** (2e) Evaluate the model **\n",
     "#### We are now ready to evaluate the quality of the model we trained in Part (4a). To do this, first write a general function that takes as input a model and data, and outputs the log loss.  Then run this function on the OHE training data, and compare the result with the baseline log loss."
    ]
   },
@@ -908,7 +908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (4f) Validation log loss **\n",
+    "#### ** (2f) Validation log loss **\n",
     "#### Next, following the same logic as in Parts (4c) and 4(e), compute the validation log loss for both the baseline and logistic regression models. Notably, the baseline model for the validation data should still be based on the label fraction from the training dataset."
    ]
   },
@@ -966,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Visualization 2: ROC curve **\n",
+    "#### **Visualization 1: ROC curve **\n",
     "#### We will now visualize how well the model predicts our target.  To do this we generate a plot of the ROC curve.  The ROC curve shows us the trade-off between the false positive rate and true positive rate, as we liberalize the threshold required to predict a positive outcome.  A random model is represented by the dashed line."
    ]
   },
@@ -1033,14 +1033,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Part 5: Reduce feature dimension via feature hashing**"
+    "### **Part 3: Reduce feature dimension via feature hashing**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (5a) Hash function **\n",
+    "#### ** (3a) Hash function **\n",
     "#### As we just saw, using a one-hot-encoding featurization can yield a model with good statistical accuracy.  However, the number of distinct categories across all features is quite large -- recall that we observed 233K categories in the training data in Part (3c).  Moreover, the full Kaggle training dataset includes more than 33M distinct categories, and the Kaggle dataset itself is just a small subset of Criteo's labeled data.  Hence, featurizing via a one-hot-encoding representation would lead to a very large feature vector. To reduce the dimensionality of the feature space, we will use feature hashing.\n",
     "####Below is the hash function that we will use for this part of the lab.  We will first use this hash function with the three sample data points from Part (1a) to gain some intuition.  Specifically, run code to hash the three sample points using two different values for `numBuckets` and observe the resulting hashed feature dictionaries."
    ]
@@ -1157,7 +1157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (5b) Creating hashed features **\n",
+    "#### ** (3b) Creating hashed features **\n",
     "#### Next we will use this hash function to create hashed features for our CTR datasets. First write a function that uses the hash function from Part (5a) with numBuckets = $ \\scriptsize 2^{15} \\approx 33K $ to create a `LabeledPoint` with hashed features stored as a `SparseVector`.  Then use this function to create new training, validation and test datasets with hashed features. Hint: `parsedHashPoint` is similar to `parseOHEPoint` from Part (3d)."
    ]
   },
@@ -1262,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (5c) Sparsity **\n",
+    "#### ** (3c) Sparsity **\n",
     "#### Since we have 33K hashed features versus 233K OHE features, we should expect OHE features to be sparser. Verify this hypothesis by computing the average sparsity of the OHE and the hashed training datasets.\n",
     "#### Note that if you have a `SparseVector` named `sparse`, calling `len(sparse)` returns the total number of features, not the number features with entries.  `SparseVector` objects have the attributes `indices` and `values` that contain information about which features are nonzero.  Continuing with our example, these can be accessed using `sparse.indices` and `sparse.values`, respectively."
    ]
@@ -1336,7 +1336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (5d) Logistic model with hashed features **\n",
+    "#### ** (3d) Logistic model with hashed features **\n",
     "#### Now let's train a logistic regression model using the hashed features. Run a grid search to find suitable hyperparameters for the hashed features, evaluating via log loss on the validation data. Note: This may take a few minutes to run. Use `1` and `10` for `stepSizes` and `1e-6` and `1e-3` for `regParams`."
    ]
   },
@@ -1444,7 +1444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Visualization 3: Hyperparameter heat map**\n",
+    "#### **Visualization 2: Hyperparameter heat map**\n",
     "#### We will now perform a visualization of an extensive hyperparameter search.  Specifically, we will create a heat map where the brighter colors correspond to lower values of `logLoss`.\n",
     "#### The search was run using six step sizes and six values for regularization, which required the training of thirty-six separate models.  We have included the results below, but omitted the actual search to save time."
    ]
@@ -1499,7 +1499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (5e) Evaluate on the test set **\n",
+    "#### ** (3e) Evaluate on the test set **\n",
     "#### Finally, evaluate the best model from Part (5d) on the test set.  Compare the resulting log loss with the baseline log loss on the test set, which can be computed in the same way that the validation log loss was computed in Part (4f)."
    ]
   },
