--- a/LogisticRegression-HandsOn.ipynb
+++ b/LogisticRegression-HandsOn.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "source": [
     "#### ** Extract features **\n",
-    "#### We will now parse the raw training data to create an RDD that we can subsequently use to create an OHE dictionary. Note from the `take()` command in Part (3a) that each raw data point is a string containing several fields separated by some delimiter.  For now, we will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features).  To do this, complete the implemention of the `parsePoint` function."
+    "#### We will now parse the raw training data to create an RDD that we can subsequently use to create an OHE dictionary. For now, we will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features).  To do this, complete the implemention of the `parsePoint` function."
    ]
   },
   {
@@ -185,7 +185,7 @@
    "metadata": {},
    "source": [
     "#### **Create an OHE dictionary from the dataset **\n",
-    "#### Note that parsePoint returns a data point as a list of `(featureID, category)` tuples, which is the same format as the sample dataset studied in Parts 1 and 2 of this lab.  Using this observation, create an OHE dictionary using the function implemented in Part (2c). Note that we will assume for simplicity that all features in our CTR dataset are categorical."
+    "#### Note that parsePoint returns a data point as a list of `(featureID, category)` tuples, which is the same format as the sample dataset studied in previous exercise.  Using this observation, create an OHE dictionary. Note that we will assume for simplicity that all features in our CTR dataset are categorical."
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "source": [
     "#### ** Apply 1-of-k to the dataset **\n",
-    "#### Now let's use this OHE dictionary by starting with the raw training data and creating an RDD of [LabeledPoint](http://spark.apache.org/docs/1.3.1/api/python/pyspark.mllib.html#pyspark.mllib.regression.LabeledPoint) objects using OHE features.  To do this, complete the implementation of the `parseOHEPoint` function. Hint: `parseOHEPoint` is an extension of the `parsePoint` function from Part (3b) and it uses the `oneHotEncoding` function from Part (1d)."
+    "#### Now let's use this OHE dictionary by starting with the raw training data and creating an RDD of [LabeledPoint](http://spark.apache.org/docs/1.3.1/api/python/pyspark.mllib.html#pyspark.mllib.regression.LabeledPoint) objects using OHE features.  To do this, complete the implementation of the `parseOHEPoint` function. Hint: `parseOHEPoint` is an extension of the `parsePoint` function from previous exercise."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "metadata": {},
    "source": [
     "#### **Handling unseen features **\n",
-    "#### We naturally would like to repeat the process from the previous exercice. e.g., to compute 1-of-k features for the validation and test datasets.  However, we must be careful, as some categorical values will likely appear in new data that did not exist in the training data. To deal with this situation, update the `oneHotEncoding()` function to ignore previously unseen categories, and then compute OHE features for the validation data."
+    "#### We naturally would like to repeat the process from the previous exercice. e.g., to compute 1-of-k features for the validation and test datasets.  However, we must be careful, as some categorical values will likely appear in new data that did not exist in the training data. To deal with this situation, update the `oneHotEncoding()` function to ignore previously unseen categories, and then compute 1-of-k features for the validation data."
    ]
   },
   {
@@ -380,8 +380,6 @@
     "        rawFeats (list of (int, str)): The features corresponding to a single observation.  Each\n",
     "            feature consists of a tuple of featureID and the feature's value. (e.g. sampleOne)\n",
     "        OHEDict (dict): A mapping of (featureID, value) to unique integer.\n",
-    "        numOHEFeats (int): The total number of unique OHE features (combinations of featureID and\n",
-    "            value).\n",
     "\n",
     "    Returns:\n",
     "        SparseVector: A SparseVector of length numOHEFeats with indicies equal to the unique\n",
@@ -505,7 +503,7 @@
    "metadata": {},
    "source": [
     "#### ** Log loss **\n",
-    "#### Throughout this lab, we will use log loss to evaluate the quality of models.  Log loss is defined as: $$  \\begin{align} \\scriptsize \\ell_{log}(p, y) = \\begin{cases} -\\log (p) & \\text{if } y = 1 \\\\\\ -\\log(1-p) & \\text{if } y = 0 \\end{cases} \\end{align} $$ where $ \\scriptsize p$ is a probability between 0 and 1 and $ \\scriptsize y$ is a label of either 0 or 1. Log loss is a standard evaluation criterion when predicting rare-events such as click-through rate prediction (it is also the criterion used in the [Criteo Kaggle competition](https://www.kaggle.com/c/criteo-display-ad-challenge)).  Write a function to compute log loss, and evaluate it on some sample inputs."
+    "#### Throughout this step, we will use log loss to evaluate the quality of models.  Log loss is defined as: $$  \\begin{align} \\scriptsize \\ell_{log}(p, y) = \\begin{cases} -\\log (p) & \\text{if } y = 1 \\\\\\ -\\log(1-p) & \\text{if } y = 0 \\end{cases} \\end{align} $$ where $ \\scriptsize p$ is a probability between 0 and 1 and $ \\scriptsize y$ is a label of either 0 or 1. Log loss is a standard evaluation criterion when predicting rare-events such as click-through rate prediction (it is also the criterion used in the [Criteo Kaggle competition](https://www.kaggle.com/c/criteo-display-ad-challenge)).  Write a function to compute log loss, and evaluate it on some sample inputs."
    ]
   },
   {
@@ -737,7 +735,7 @@
    "metadata": {},
    "source": [
     "#### ** Evaluate the model **\n",
-    "#### We are now ready to evaluate the quality of the model we trained in Part (4a). To do this, first write a general function that takes as input a model and data, and outputs the log loss.  Then run this function on the OHE training data, and compare the result with the baseline log loss."
+    "#### We are now ready to evaluate the quality of the model we trained. To do this, first write a general function that takes as input a model and data, and outputs the log loss.  Then run this function on the 1-of-k training data, and compare the result with the baseline log loss."
    ]
   },
   {
@@ -938,7 +936,7 @@
    "metadata": {},
    "source": [
     "#### ** Hash function **\n",
-    "#### As we just saw, using a one-hot-encoding featurization can yield a model with good statistical accuracy.  However, the number of distinct categories across all features is quite large -- recall that we observed 233K categories in the training data in the part 3.  Moreover, the full Kaggle training dataset includes more than 33M distinct categories, and the Kaggle dataset itself is just a small subset of Criteo's labeled data.  Hence, featurizing via a one-hot-encoding representation would lead to a very large feature vector. To reduce the dimensionality of the feature space, we will use feature hashing.\n",
+    "#### As we just saw, using a one-hot-encoding featurization can yield a model with good statistical accuracy.  However, the number of distinct categories across all features is quite large -- recall that we observed 233K categories in the training data.  Moreover, the full Kaggle training dataset includes more than 33M distinct categories, and the Kaggle dataset itself is just a small subset of Criteo's labeled data.  Hence, featurizing via a one-hot-encoding representation would lead to a very large feature vector. To reduce the dimensionality of the feature space, we will use feature hashing.\n",
     "####Below is the hash function that we will use for this part of the exercice.  We will first use this hash function with the three sample data points to gain some intuition.  Specifically, run code to hash the three sample points using two different values for `numBuckets` and observe the resulting hashed feature dictionaries."
    ]
   },
@@ -1160,7 +1158,7 @@
    "metadata": {},
    "source": [
     "#### ** (3c) Sparsity **\n",
-    "#### Since we have 33K hashed features versus 233K OHE features, we should expect OHE features to be sparser. Verify this hypothesis by computing the average sparsity of the OHE and the hashed training datasets.\n",
+    "#### Since we have 33K hashed features versus 233K 1-of-K features, we should expect 1-of-K features to be sparser. Verify this hypothesis by computing the average sparsity of the 1-of-K and the hashed training datasets.\n",
     "#### Note that if you have a `SparseVector` named `sparse`, calling `len(sparse)` returns the total number of features, not the number features with entries.  `SparseVector` objects have the attributes `indices` and `values` that contain information about which features are nonzero.  Continuing with our example, these can be accessed using `sparse.indices` and `sparse.values`, respectively."
    ]
   },
@@ -1394,8 +1392,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ** (3e) Evaluate on the test set **\n",
-    "#### Finally, evaluate the best model from Part (5d) on the test set.  Compare the resulting log loss with the baseline log loss on the test set, which can be computed in the same way that the validation log loss was computed in Part (4f)."
+    "#### ** Evaluate on the test set **\n",
+    "#### Finally, evaluate the best model on the test set.  Compare the resulting log loss with the baseline log loss on the test set, which can be computed in the same way that the validation log loss was computed before."
    ]
   },
   {
