--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "source": [
     "#### ** Extract features **\n",
-    "#### We will now parse the raw training data to create an RDD that we can subsequently use to create an OHE dictionary. Note from the `take()` command in Part (3a) that each raw data point is a string containing several fields separated by some delimiter.  For now, we will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features).  To do this, complete the implemention of the `parsePoint` function."
+    "#### We will now parse the raw training data to create an RDD that we can subsequently use to create an OHE dictionary.  For now, we will ignore the first field (which is the 0-1 label), and parse the remaining fields (or raw features).  To do this, complete the implemention of the `parsePoint` function."
    ]
   },
   {
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "855\n"
+      "[[(0, u'1'), (1, u'1'), (2, u'5'), (3, u'0'), (4, u'1382'), (5, u'4'), (6, u'15'), (7, u'2'), (8, u'181'), (9, u'1'), (10, u'2'), (11, u''), (12, u'2'), (13, u'68fd1e64'), (14, u'80e26c9b'), (15, u'fb936136'), (16, u'7b4723c4'), (17, u'25c83c98'), (18, u'7e0ccccf'), (19, u'de7995b8'), (20, u'1f89b562'), (21, u'a73ee510'), (22, u'a8cd5504'), (23, u'b2cb9c98'), (24, u'37c9c164'), (25, u'2824a5f6'), (26, u'1adce6ef'), (27, u'8ba8b39a'), (28, u'891b62e7'), (29, u'e5ba7672'), (30, u'f54016b9'), (31, u'21ddcdc9'), (32, u'b1252a9d'), (33, u'07b5194c'), (34, u''), (35, u'3a171ecb'), (36, u'c5c50484'), (37, u'e8b83407'), (38, u'9727dd16')]]\n"
      ]
     }
    ],
@@ -177,17 +177,18 @@
     "    \n",
     "    return fv_tup\n",
     "    \n",
-    "parsedTrainFeat = rawTrainData.map(parsePoint)\n",
+    "parsedTrainFeat = rawTrainData.map(parsePoint) \n",
+    "print parsedTrainFeat.take(1)\n",
     "\n",
-    "numCategories = (parsedTrainFeat\n",
-    "                 .flatMap(lambda x: x)\n",
-    "                 .distinct()\n",
-    "                 .map(lambda x: (x[0], 1))\n",
-    "                 .reduceByKey(lambda x, y: x + y)\n",
-    "                 .sortByKey()\n",
-    "                 .collect())\n",
+    "#numCategories = (parsedTrainFeat\n",
+    "                 #.flatMap(lambda x: x)\n",
+    "                 #.distinct()\n",
+    "                 #.map(lambda x: (x[0], 1))\n",
+    "                 #.reduceByKey(lambda x, y: x + y)\n",
+    "                 #.sortByKey()\n",
+    "            #.collect())\n",
     "\n",
-    "print numCategories[2][1]"
+    "#print numCategories[2][1]"
    ]
   },
   {
@@ -196,20 +197,11 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 test passed.\n",
-      "1 test passed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TEST Extract features (3b)\n",
-    "Test.assertEquals(numCategories[2][1], 855, 'incorrect implementation of parsePoint')\n",
-    "Test.assertEquals(numCategories[32][1], 4, 'incorrect implementation of parsePoint')"
+    "#Test.assertEquals(numCategories[2][1], 855, 'incorrect implementation of parsePoint')\n",
+    "#Test.assertEquals(numCategories[32][1], 4, 'incorrect implementation of parsePoint')"
    ]
   },
   {
@@ -217,7 +209,7 @@
    "metadata": {},
    "source": [
     "#### **Create an OHE dictionary from the dataset **\n",
-    "#### Note that parsePoint returns a data point as a list of `(featureID, category)` tuples, which is the same format as the sample dataset studied in Parts 1 and 2 of this lab.  Using this observation, create an OHE dictionary using the function implemented in Part (2c). Note that we will assume for simplicity that all features in our CTR dataset are categorical."
+    "#### Note that parsePoint returns a data point as a list of `(featureID, category)` tuples, which is the same format as the sample dataset studied previous exercise.  Using this observation, create an I-of-K dictionary. Note that we will assume for simplicity that all features in our CTR dataset are categorical."
    ]
   },
   {
@@ -290,7 +282,7 @@
    "metadata": {},
    "source": [
     "#### ** Apply OHE to the dataset **\n",
-    "#### Now let's use this OHE dictionary by starting with the raw training data and creating an RDD of [LabeledPoint](http://spark.apache.org/docs/1.3.1/api/python/pyspark.mllib.html#pyspark.mllib.regression.LabeledPoint) objects using OHE features.  To do this, complete the implementation of the `parseOHEPoint` function. Hint: `parseOHEPoint` is an extension of the `parsePoint` function from Part (3b) and it uses the `oneHotEncoding` function from Part (1d)."
+    "#### Now let's use this OHE dictionary by starting with the raw training data and creating an RDD of [LabeledPoint](http://spark.apache.org/docs/1.3.1/api/python/pyspark.mllib.html#pyspark.mllib.regression.LabeledPoint) objects using OHE features.  To do this, complete the implementation of the `parseOHEPoint` function. Hint: `parseOHEPoint` is an extension of the `parsePoint` function from previous exercise."
    ]
   },
   {
@@ -405,14 +397,15 @@
    "metadata": {},
    "source": [
     "#### **Handling unseen features **\n",
-    "#### We naturally would like to repeat the process from Part (3d), e.g., to compute OHE features for the validation and test datasets.  However, we must be careful, as some categorical values will likely appear in new data that did not exist in the training data. To deal with this situation, update the `oneHotEncoding()` function from Part (1d) to ignore previously unseen categories, and then compute OHE features for the validation data."
+    "#### We naturally would like to repeat the process from previous part, e.g., to compute 1-of-k features for the validation and test datasets.  However, we must be careful, as some categorical values will likely appear in new data that did not exist in the training data. To deal with this situation, update the `oneHotEncoding()` function ignore previously unseen categories, and then compute 1-of-k features for the validation data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -436,8 +429,6 @@
     "        rawFeats (list of (int, str)): The features corresponding to a single observation.  Each\n",
     "            feature consists of a tuple of featureID and the feature's value. (e.g. sampleOne)\n",
     "        OHEDict (dict): A mapping of (featureID, value) to unique integer.\n",
-    "        numOHEFeats (int): The total number of unique OHE features (combinations of featureID and\n",
-    "            value).\n",
     "\n",
     "    Returns:\n",
     "        SparseVector: A SparseVector of length numOHEFeats with indicies equal to the unique\n",
@@ -455,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -464,12 +455,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[SparseVector(233286, {7623: 1.0, 9238: 1.0, 15597: 1.0, 21650: 1.0, 31238: 1.0, 36177: 1.0, 36577: 1.0, 39536: 1.0, 49203: 1.0, 61797: 1.0, 66635: 1.0, 67253: 1.0, 68245: 1.0, 68344: 1.0, 73075: 1.0, 76724: 1.0, 81421: 1.0, 81485: 1.0, 92068: 1.0, 96986: 1.0, 98511: 1.0, 109720: 1.0, 117014: 1.0, 121550: 1.0, 141683: 1.0, 146472: 1.0, 147618: 1.0, 171119: 1.0, 184096: 1.0, 184644: 1.0, 185457: 1.0, 185819: 1.0, 194734: 1.0, 198514: 1.0, 201019: 1.0, 210722: 1.0, 213593: 1.0, 222178: 1.0, 227716: 1.0})]\n",
+      "[array([  7623,   9238,  15597,  21650,  31238,  36177,  36577,  39536,\n",
+      "        49203,  61797,  66635,  67253,  68245,  68344,  73075,  76724,\n",
+      "        81421,  81485,  92068,  96986,  98511, 109720, 117014, 121550,\n",
+      "       141683, 146472, 147618, 171119, 184096, 184644, 185457, 185819,\n",
+      "       194734, 198514, 201019, 210722, 213593, 222178, 227716])]\n",
       "1 test passed.\n"
      ]
     }
    ],
    "source": [
     "# TEST Handling unseen features (3e)\n",
+    "print OHEValidationData.map(lambda lp:lp.features).take(1)\n",
+    "print OHEValidationData.map(lambda lp:lp.features.indices).take(1)\n",
     "numNZVal = (OHEValidationData\n",
     "            .map(lambda lp: len(lp.features.indices))\n",
     "            .sum())\n",
@@ -561,7 +560,7 @@
    "metadata": {},
    "source": [
     "#### ** (2b) Log loss **\n",
-    "#### Throughout this lab, we will use log loss to evaluate the quality of models.  Log loss is defined as: $$  \\begin{align} \\scriptsize \\ell_{log}(p, y) = \\begin{cases} -\\log (p) & \\text{if } y = 1 \\\\\\ -\\log(1-p) & \\text{if } y = 0 \\end{cases} \\end{align} $$ where $ \\scriptsize p$ is a probability between 0 and 1 and $ \\scriptsize y$ is a label of either 0 or 1. Log loss is a standard evaluation criterion when predicting rare-events such as click-through rate prediction (it is also the criterion used in the [Criteo Kaggle competition](https://www.kaggle.com/c/criteo-display-ad-challenge)).  Write a function to compute log loss, and evaluate it on some sample inputs."
+    "#### Throughout this exercise, we will use log loss to evaluate the quality of models.  Log loss is defined as: $$  \\begin{align} \\scriptsize \\ell_{log}(p, y) = \\begin{cases} -\\log (p) & \\text{if } y = 1 \\\\\\ -\\log(1-p) & \\text{if } y = 0 \\end{cases} \\end{align} $$ where $ \\scriptsize p$ is a probability between 0 and 1 and $ \\scriptsize y$ is a label of either 0 or 1. Log loss is a standard evaluation criterion when predicting rare-events such as click-through rate prediction (it is also the criterion used in the [Criteo Kaggle competition](https://www.kaggle.com/c/criteo-display-ad-challenge)).  Write a function to compute log loss, and evaluate it on some sample inputs."
    ]
   },
   {
@@ -654,7 +653,7 @@
    "metadata": {},
    "source": [
     "#### ** (2c)  Baseline log loss **\n",
-    "#### Next we will use the function we wrote in Part (4b) to compute the baseline log loss on the training data. A very simple yet natural baseline model is one where we always make the same prediction independent of the given datapoint, setting the predicted value equal to the fraction of training points that correspond to click-through events (i.e., where the label is one). Compute this value (which is simply the mean of the training labels), and then use it to compute the training log loss for the baseline model.  The log loss for multiple observations is the mean of the individual log loss values."
+    "#### Next we will use the function we wrote to compute the baseline log loss on the training data. A very simple yet natural baseline model is one where we always make the same prediction independent of the given datapoint, setting the predicted value equal to the fraction of training points that correspond to click-through events (i.e., where the label is one). Compute this value (which is simply the mean of the training labels), and then use it to compute the training log loss for the baseline model.  The log loss for multiple observations is the mean of the individual log loss values."
    ]
   },
   {
@@ -712,7 +711,7 @@
    "metadata": {},
    "source": [
     "#### ** (2d) Predicted probability **\n",
-    "#### In order to compute the log loss for the model we trained in Part (4a), we need to write code to generate predictions from this model. Write a function that computes the raw linear prediction from this logistic regression model and then passes it through a [sigmoid function](http://en.wikipedia.org/wiki/Sigmoid_function) $ \\scriptsize \\sigma(t) = (1+ e^{-t})^{-1} $ to return the model's probabilistic prediction. Then compute probabilistic predictions on the training data.\n",
+    "#### In order to compute the log loss for the model we trained before, we need to write code to generate predictions from this model. Write a function that computes the raw linear prediction from this logistic regression model and then passes it through a [sigmoid function](http://en.wikipedia.org/wiki/Sigmoid_function) $ \\scriptsize \\sigma(t) = (1+ e^{-t})^{-1} $ to return the model's probabilistic prediction. Then compute probabilistic predictions on the training data.\n",
     "#### Note that when incorporating an intercept into our predictions, we simply add the intercept to the value of the prediction obtained from the weights and features.  Alternatively, if the intercept was included as the first weight, we would need to add a corresponding feature to our data where the feature has the value one.  This is not the case here."
    ]
   },
@@ -840,7 +839,7 @@
    "metadata": {},
    "source": [
     "#### ** (2e) Evaluate the model **\n",
-    "#### We are now ready to evaluate the quality of the model we trained in Part (4a). To do this, first write a general function that takes as input a model and data, and outputs the log loss.  Then run this function on the OHE training data, and compare the result with the baseline log loss."
+    "#### We are now ready to evaluate the quality of the model we trained before. To do this, first write a general function that takes as input a model and data, and outputs the log loss.  Then run this function on the OHE training data, and compare the result with the baseline log loss."
    ]
   },
   {
@@ -909,7 +908,7 @@
    "metadata": {},
    "source": [
     "#### ** (2f) Validation log loss **\n",
-    "#### Next, following the same logic as in Parts (4c) and 4(e), compute the validation log loss for both the baseline and logistic regression models. Notably, the baseline model for the validation data should still be based on the label fraction from the training dataset."
+    "#### Next, following the same logic as previous parts, compute the validation log loss for both the baseline and logistic regression models. Notably, the baseline model for the validation data should still be based on the label fraction from the training dataset."
    ]
   },
   {
@@ -1041,8 +1040,8 @@
    "metadata": {},
    "source": [
     "#### ** (3a) Hash function **\n",
-    "#### As we just saw, using a one-hot-encoding featurization can yield a model with good statistical accuracy.  However, the number of distinct categories across all features is quite large -- recall that we observed 233K categories in the training data in Part (3c).  Moreover, the full Kaggle training dataset includes more than 33M distinct categories, and the Kaggle dataset itself is just a small subset of Criteo's labeled data.  Hence, featurizing via a one-hot-encoding representation would lead to a very large feature vector. To reduce the dimensionality of the feature space, we will use feature hashing.\n",
-    "####Below is the hash function that we will use for this part of the lab.  We will first use this hash function with the three sample data points from Part (1a) to gain some intuition.  Specifically, run code to hash the three sample points using two different values for `numBuckets` and observe the resulting hashed feature dictionaries."
+    "#### As we just saw, using a one-hot-encoding featurization can yield a model with good statistical accuracy.  However, the number of distinct categories across all features is quite large -- recall that we observed 233K categories in our training data.  Moreover, the full Kaggle training dataset includes more than 33M distinct categories, and the Kaggle dataset itself is just a small subset of Criteo's labeled data.  Hence, featurizing via a one-hot-encoding representation would lead to a very large feature vector. To reduce the dimensionality of the feature space, we will use feature hashing.\n",
+    "####Below is the hash function that we will use for this part of the lab.  We will first use this hash function with the three sample data points to gain some intuition.  Specifically, run code to hash the three sample points using two different values for `numBuckets` and observe the resulting hashed feature dictionaries."
    ]
   },
   {
@@ -1158,7 +1157,7 @@
    "metadata": {},
    "source": [
     "#### ** (3b) Creating hashed features **\n",
-    "#### Next we will use this hash function to create hashed features for our CTR datasets. First write a function that uses the hash function from Part (5a) with numBuckets = $ \\scriptsize 2^{15} \\approx 33K $ to create a `LabeledPoint` with hashed features stored as a `SparseVector`.  Then use this function to create new training, validation and test datasets with hashed features. Hint: `parsedHashPoint` is similar to `parseOHEPoint` from Part (3d)."
+    "#### Next we will use this hash function to create hashed features for our CTR datasets. First write a function that uses the hash function with numBuckets = $ \\scriptsize 2^{15} \\approx 33K $ to create a `LabeledPoint` with hashed features stored as a `SparseVector`.  Then use this function to create new training, validation and test datasets with hashed features. Hint: `parsedHashPoint` is similar to `parseOHEPoint`."
    ]
   },
   {
@@ -1500,7 +1499,7 @@
    "metadata": {},
    "source": [
     "#### ** (3e) Evaluate on the test set **\n",
-    "#### Finally, evaluate the best model from Part (5d) on the test set.  Compare the resulting log loss with the baseline log loss on the test set, which can be computed in the same way that the validation log loss was computed in Part (4f)."
+    "#### Finally, evaluate the best model on the test set.  Compare the resulting log loss with the baseline log loss on the test set, which can be computed in the same way that the validation log loss was computed before."
    ]
   },
   {
